2019-11-04  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92341
	PR middle-end/82612
	* tree-sra.c (get_access_for_expr): Fail for out-of-bounds offsets.
	* tree-vrp.c (vrp_prop::check_array_ref): Correct index and text
	of message printed in a warning for empty arrays.
	(vrp_prop::check_mem_ref): Also handle function parameters and
	empty arrays.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92371
	* tree-vect-loop.c (vectorizable_reduction): Set STMT_VINFO_REDUC_DEF
	on the original stmt of live stmts in the chain.
	(vectorizable_live_operation): Look at the original stmt when
	checking STMT_VINFO_REDUC_DEF.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* gimple-fold.c, gimple-loop-versioning.cc,
	gimple-ssa-evrp-analyze.[ch], gimple-ssa-evrp.c,
	gimple-ssa-sprintf.c, ipa-cp.c, ipa-prop.c, ipa-prop.h,
	range-op.[hc]*, range.[hc]*, selftest.h, tree-ssa-dom.c,
	tree-ssa-strlen.c, tree-ssa-threadedge.c, tree-ssanames.[hc],
	tree-vrp.[hc], vr-values.[hc]: Global rename of value_range to
	value_range_equiv, and value_range_base to value_range.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* expr.c (build_personality_function): Fix generated type to
	match actual personality functions.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* config/aarch64/aarch64.c (aarch64_handle_attr_cpu): Allocate
	enough bytes for the NULL character.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92280
	* match.pd (BIT_FIELD_REF of CTOR): Unless the original CTOR
	had a single use do not create a new CTOR.
	* tree-ssa-forwprop.c (simplify_bitfield_ref): Do not re-fold
	BIT_FIELD_REF of a CTOR via GENERIC.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/s390/s390.c (s390_vector_alignment): Check if the value
	fits into uhwi before using it.

2019-11-05  Martin Liska  <mliska@suse.cz>

	* symbol-summary.h: Use ggc_delete.

2019-11-05  Anton Youdkevitch  <anton.youdkevitch@bell-sw.com>
